discussion/kv_engine/145204/145204_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-43818: terminate handler: Print backtrace of where exception thrown if available

Change-Id: I16db4af0a57ae91167e243dba9f134f01cd64153

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-02-04 15:53:28.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-02-04 16:07:29.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6933/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/terminate_handler.cc:25:10: error: "platform/exceptions.h" file not found [clang-diagnostic-error]
#include <platform/exceptions.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6933/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/terminate_handler.cc:25:10:
error: "platform/exceptions.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6933/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33396/ : FAILURE

Compile error at ..\kv_engine\utilities\terminate_handler.cc(25): fatal error C1083: Cannot open include file: "platform/exceptions.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33396/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28730/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/utilities/terminate_handler.cc:25:10:
fatal error: "platform/exceptions.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28730/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7568/ : FAILURE

Compile error at [2021-02-04T15:54:34.128Z] ../kv_engine/utilities/terminate_handler.cc:25:10:
fatal error: "platform/exceptions.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7568/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8641/ : FAILURE

Compile error at [2021-02-04T16:03:53.592Z] ../kv_engine/utilities/terminate_handler.cc:25:10:
fatal error: platform/exceptions.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8641/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8503/ : FAILURE

Compile error at [2021-02-04T16:04:14.384Z] ../kv_engine/utilities/terminate_handler.cc:25:10:
fatal error: platform/exceptions.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8503/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8860/ : FAILURE

Compile error at [2021-02-04T16:05:15.475Z] ../kv_engine/utilities/terminate_handler.cc:25:10:
fatal error: "platform/exceptions.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8860/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16409/ : FAILURE

Compile error at [2021-02-04T16:04:54.024Z] ../kv_engine/utilities/terminate_handler.cc:25:10:
fatal error: "platform/exceptions.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16409/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5470/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
